--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <div class="nav-overlay" id="nav-overlay"></div>
     <div id="sticky-nav">
+        <button class="hamburger" id="hamburger-sticky" aria-label="Open navigation menu">
+            <span></span><span></span>
+        </button>
         <nav>
-            <ul>
+            <ul id="sticky-nav-list">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#skills">SKILLS</a></li>
@@ -29,8 +33,11 @@
         </nav>
     </div>
     <header>
+        <button class="hamburger" id="hamburger-header" aria-label="Open navigation menu">
+            <span></span><span></span>
+        </button>
         <nav>
-            <ul>
+            <ul id="header-nav-list">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#skills">SKILLS</a></li>
